# sqlite-utils-ml

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
sqlite_utils_ml/: __init__.py
tests/: test_plugin.py
